--- a/slides/workshop/part1/index.html
+++ b/slides/workshop/part1/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Session-1</title>
+    <title>RADcamp-1</title>
     <link rel="stylesheet" href="../../reveal/css/reveal.css">
     <link rel="stylesheet" href="../../reveal/css/theme/simple.css">    
     <link rel="stylesheet" href="../../eaton-lab.css">
@@ -65,12 +65,10 @@
 
 
 <!-- SLIDE 2 (What will we be doing today? -->
-<section 
-    data-background-iframe="https://radcamp.github.io/IBS2019"
-    data-transition="none"
-    style="top:-960px; display: block;" 
-    class="future" 
-    hidden="">       
+<section>
+<h3> Our schedule for today</h3>
+<p> Please follow along on <a>https://radcamp.github.io/IBS2019/</a>
+<img class=plain src="../data/RADcamp-schedule.png" style="width: 80%; height: 20%;">
 </section>
 
 
