--- a/slides/workshop/part1/index.html
+++ b/slides/workshop/part1/index.html
@@ -65,7 +65,7 @@
 
 
 <!-- SLIDE 2 (What will we be doing today? -->
-<section>
+<section data-transition="none">
 <h3> Our schedule for today</h3>
 <p> Please follow along on <a>https://radcamp.github.io/IBS2019/</a>
 <img class=plain src="../data/RADcamp-schedule.png" style="width: 80%; height: 20%;">
@@ -73,7 +73,7 @@
 
 
 <!-- WHO ARE WE? -->
-<section>
+<section data-transition="none">
     <section 
     data-background-iframe="https://ipyrad.readthedocs.io/"
     data-transition="none"
@@ -111,7 +111,7 @@
 </section>
 
 <!-- DDDDDDDDDD -->
-<section>
+<section data-transition="none">
 <h3> Population genomic analyses </h3>
 <img class=plain src="../data/Andrews-Box2.png" style="width: 70%; height: 20%;">
 <br>
@@ -125,7 +125,7 @@
 </section>
 
 <!-- EEEEEEEEEEEE -->
-<section>
+<section data-transition="none">
 <h3> Phylogenomic analyses </h3>
 <img class=plain src="../data/Eaton-2015-fig5.png" style="width: 50%; height: 20%;">
 <br>
@@ -139,7 +139,7 @@
 </section>
 
 <!-- FFFFFFFFFFFF -->
-<section>
+<section data-transition="none">
     <section>
     <h5> What is RAD-seq (and its variants) </h5>
     <img class=plain src="../data/RAD-original.png" style="width: 28%; height: 20%;">
@@ -164,7 +164,7 @@
 
 
 <!-- EEEEEEEEEEEE -->
-<section>
+<section data-transition="none">
     <section>
     <h3> Concerns about RAD-seq</h3>
     <p> Why not just sequence the whole genome at low-coverage?</p>
@@ -236,7 +236,7 @@
 </section>
 
 
-<section>
+<section data-transition="none">
     <section>
         <h3> Hierarchical File System</h3>
         <p style="font-size:0.75em"> Always know where you are and where your files are.</p>
