slides2 workshop up

--- a/slides/workshop/part2/index.html
+++ b/slides/workshop/part2/index.html
@@ -332,6 +332,14 @@ $ jupyter-notebook
 </section>
 
 
+<section data-transition="none">
+<h3> Phylogenomic analyses </h3>
+<p style="font-size:0.85em;"> 
+    Infer gene trees and species trees from RAD-seq data.
+</p>
+<img class=plain src="../data/phylogenetics.png" style="width: 80%; height: 20%;">
+<br>
+
 <!-- SLIDE 9 -->
 <!-- data-background-iframe="http://mybinder.org/repo/eaton-lab/toytree" -->
 <!-- <section 
