slides2 workshop up

--- a/slides/workshop/part2/index.html
+++ b/slides/workshop/part2/index.html
@@ -339,6 +339,18 @@ $ jupyter-notebook
 </p>
 <img class=plain src="../data/phylogenetics.png" style="width: 80%; height: 20%;">
 <br>
+</section>
+
+<section data-transition="none">
+<h3> Example github repositories with reproducible notebooks </h3>
+<a href=https://github.com/dereneaton/Canarium-GBS>https://github.com/dereneaton/Canarium-GBS</a>
+<br><br>
+<a href=
+https://nbviewer.jupyter.org/github/dereneaton/ipyrad/blob/master/tests/cookbook-empirical-API-1-pedicularis.ipynb>
+https://nbviewer.jupyter.org/github/dereneaton/ipyrad/blob/master/tests/cookbook-empirical-API-1-pedicularis.ipynb</a>
+</section>
+
+
 
 <!-- SLIDE 9 -->
 <!-- data-background-iframe="http://mybinder.org/repo/eaton-lab/toytree" -->
