--- a/slides/china-2018/index.html
+++ b/slides/china-2018/index.html
@@ -9,9 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>China 2018</title>
     <link rel="stylesheet" href="../reveal/css/reveal.css">
-    <link rel="stylesheet" href="../eaton-lab.css" id='theme'>
+    <!-- <link rel="stylesheet" href="../eaton-lab.css" id='theme'> -->
+    <!-- <link rel="stylesheet" href="../reveal/css/theme/white.css">     -->
+    <link rel="stylesheet" href="../eaton-lab.css">
     <link rel="stylesheet" href="../reveal/lib/css/zenburn.css">    
-    <!-- <link rel="stylesheet" href="../reveal/lib/css/font-awesome.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">    
 </head>
 
@@ -26,91 +27,187 @@
     </div>
 
     <!-- set reveal defaults ... -->
-    <div class="reveal linear center" data-transition-speed="default" data-background-transition="default">
+    <div class="reveal linear" data-transition-speed="default" data-background-transition="default">
 
         <!-- By giving slides a dimension we can use pixels or % -->
         <div class="slides" style="width: 960px; height: 720px; transform: translate(-50%, -50%) scale(0.969792) translate(50%, 50%);">
 
-            <!--  -->
-            <section 
-                data-background-image="images/deren-flags.jpg"
-                data-background-position="center"
-                data-background-size="cover"
-                data-transition="none" 
-                class="future" 
-                hidden="">
-                <div class="fragment grow" style="top:-50%; display: block">
-                    <div class="fragment shrink">
-                        <h3 style="color: white">Hello world</h3>
-                    </div>
-                </div>          
-            </section>
 
-            <!-- Here transition none is good, text doesn't fly in -->
-            <section data-transition="none" style="top: -360px;">
+<!-- ###################################################################### -->
 
-                <div id='content' style="padding:10%;">
-                    <div id='mapcol' style="
-                        background-color: #262626;
-                        width: 50%; 
-                        height: 1000%; 
-                        display: inline-block;">
-                        Hello world
-                    </div>                    
-                </div>
-            </section>
 
-            <section>
-                <pre><code class="python">
-    def wat(x, y):
-            for i in range(x):
-            y += x
+<!-- SLIDE 1 -->
+<section data-background="white" data-transition="none">
+    <h2 class="title">The coalescent</h2>
+    <pre class="class1">
+       Hello world
+    </pre>
+
+    <div class="citation">
+        <a href="http://mbe.oxfordjournals.org/content/22/5/1185.short">
+            Drummond et al. 2005
+        </a>
+    </div>
+</section>
+
+
+<!-- SLIDE 2 -->
+<section data-background="white" data-transition="none">
+    <h3 >Parse index numbers from loci</h3>
+    <pre><code class="python">
+def get_ref_locus_idxs(self):
+    idxs = []
+
+    with open(self.data) as indata:
+        liter = (indata.read().strip().split("|\n"))
+
+    for idx, loc in enumerate(liter):
+        lines = loc.split("\n")
+        snpline = loc[-1]
+        locidx, chidx, pos = snpline.split("|")[1].split(":")            
+        names = [i.split()[0] for i in lines[:-1]]
+
+        ## check coverage
+        coverage = 0
+        for node in self.imap:
+            mincov = self.minmap[node]
+            if sum([i in names for i in self.imap[node]]) >= mincov:
+                coverage += 1
+        
+        if coverage == len(self.imap.keys()):
+            pos1, pos2 = pos.split('-')
+            refinfo = (idx, chidx, pos1, pos2)
+            idxs.append(refinfo)
+    return idxs
+    </code></pre>
+</section>
+
+
+<!-- SLIDE 3 -->
+<section data-background="white" data-transition="none">
+    <pre><code class="python" style="font-size: 18px">
+def get_ref_locus_idxs(self):
+    idxs = []
+
+    with open(self.data) as indata:
+        liter = (indata.read().strip().split("|\n"))
+
+    for idx, loc in enumerate(liter):
+        lines = loc.split("\n")
+        snpline = loc[-1]
+        locidx, chidx, pos = snpline.split("|")[1].split(":")            
+        names = [i.split()[0] for i in lines[:-1]]
+
+    </code></pre>
+    <img class="plain" src="../2018-CCNY/images/intro-rad.svg" style="width: 863.678px; height: 577px;">
+</section>
+
+
+<!-- SLIDE 4 -->
+<section data-background="8474D1" data-transition="none">
+    <h3>Eaton Lab China expedition 2018</h3>
+    <!-- what happened to class='stretch'? -->
+    <img class="plain" src="images/deren-flags.jpg" style="width: 80%;">
+    <!-- style="width: 863.678px; height: 577px;"> -->
+</section>
+
+
+<section data-background="8474D1" data-transition="none">
+    <h2 style='font-size: 32pt'>Limits on the application of genomics to phylogeny</h2>
+    <img src="../2018-CCNY/images/intro-rad.svg" style="width: 863.678px; height: 577px;">
+</section>            
+
+
+<!-- SLIDE 5 -->
+<section 
+    data-background-image="images/deren-flags.jpg"
+    data-background-position="center"
+    data-background-size="cover"
+    data-transition="none" 
+    class="future" 
+    hidden="">
+    <div class="fragment grow" style="top:-50%; display: block">
+        <div class="fragment shrink">
+            <h3 style="color: white">Hello world</h3>
+        </div>
+    </div>          
+</section>
+
+
+<!-- SLIDE 6 -->
+<!-- Here transition none is good, text doesn't fly in -->
+<section data-transition="none" style="top: -360px;">
+    <div id='content' style="padding:10%;">
+        <div id='mapcol' style="
+            background-color: #262626;
+            width: 50%; 
+            height: 1000%; 
+            display: inline-block;">
+            Hello world
+        </div>                    
+    </div>
+</section>
+
+
+<!-- SLIDE 7 -->
+<section>
+    <pre><code class="python">
+def wat(x, y):
+    for i in range(x):
+        y += x
         return y
-                </code></pre>
-            </section>
+    </code></pre>
+</section>
 
 
-            <!-- SLIDE 3: vertical with code -->
-            <section>
-                <section data-transition="none">
-                    Vertical slide 1
-                </section>
-                <section data-transition="none">
-                    Vertical slide 2
-                </section>
-            </section>
+<!-- SLIDE 8 -->
+<section>
+    <section data-transition="none">
+        Vertical slide 1
+    </section>
+    <section data-transition="none">
+        Vertical slide 2
+    </section>
+</section>
 
 
-            <section 
-            data-background-image="images/yellow-field.jpg"
-            data-transition="none" style="top:-960px; display: block;" class="future" hidden="">
-                <h2>Hello world</h2>
-            </section>          
+<!-- SLIDE 9: vertical with code -->
+<section 
+    data-background-image="images/yellow-field.jpg"
+    data-transition="none" style="top:-960px; display: block;" class="future" hidden="">
+    <h2>Hello world</h2>
+</section>          
 
-            <section 
-            data-background-image="images/patrick-bouquet.jpg"
-            data-background-position="25% 75%"
-            data-background-size="cover"
-            data-transition="none" style="top:-960px; display: block;" class="future" hidden="">
-                <h2>Hello world</h2>
-            </section>                      
 
-            <!-- map -->
-            <section data-background-iframe="/home/deren/Dropbox/crano2.html" 
-            data-background-interactive data-transition="none"
-            style="top:-960px; display: block;" class="future" hidden="">
-            
-            </section>
+<!-- SLIDE 10 -->
+<section 
+    data-background-image="images/patrick-bouquet.jpg"
+    data-background-position="25% 75%"
+    data-background-size="cover"
+    data-transition="none" style="top:-960px; display: block;" class="future" hidden="">
+    <h2>Hello world</h2>
+</section>                      
 
-            <!-- map -->
-            <section data-background-color="white">
-                <iframe 
-                    class="stretch" 
-                    align='middle' 
-                    data-src="/home/deren/Dropbox/crano2.html">
-                </iframe>
-                <!-- </div> -->
-            </section>
+
+
+<!-- SLIDE 11 -->
+<!-- map -->
+<section data-background-iframe="/home/deren/Dropbox/crano2.html" 
+    data-background-interactive data-transition="none"
+    style="top:-960px; display: block;" class="future" hidden="">       
+</section>
+
+
+<!-- SLIDE 12 -->
+<!-- Could put leaflet css in a stylesheet and then just copy html here? -->
+<section data-background-color="white">
+    <iframe 
+        class="stretch" 
+        align='middle' 
+        data-src="/home/deren/Dropbox/crano2.html">
+    </iframe>
+</section>
+
 
 
             <!-- 1  -->
@@ -279,7 +376,7 @@
                 controls:true, 
                 progress:false, 
                 loop:true, 
-                history:false,
+                history:true,
                 center:false,
                 fragmentInURL:true,
                 margin:.05,
@@ -287,8 +384,10 @@
                 maxScale:5,
                 width:960,
                 height:720,
-                // theme:Reveal.getQueryHash().theme,
-                // transition:Reveal.getQueryHash().transition||"linear",                 
+                theme:Reveal.getQueryHash().theme,
+                transition:Reveal.getQueryHash().transition||"linear",
+                // slideNumber: true,
+                slideNumber: "h/v",
                 dependencies: [
                 //     { src: '../reveal/lib/js/classList.js', condition: function() { return !document.body.classList; } },
                 { src: '../reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
@@ -300,6 +399,5 @@
 
             // Reveal.initialize({controls:!1,progress:!0,history:!0,center:!0,margin:.05,minScale:.1,maxScale:5,width:960,height:720,theme:Reveal.getQueryHash().theme,transition:Reveal.getQueryHash().transition||"linear",math:{mathjax:"http://cdn.mathjax.org/mathjax/latest/MathJax.js",config:"TeX-AMS_HTML-full"},dependencies:[{src:"../reveal/lib/js/classList.js",condition:function(){return!document.body.classList}},{src:"../reveal/plugin/markdown/marked.js",condition:function(){return!!document.querySelector("[data-markdown]")}},{src:"../reveal/plugin/markdown/markdown.js",condition:function(){return!!document.querySelector("[data-markdown]")}},{src:"../reveal/plugin/highlight/highlight.js",async:!0,callback:function(){hljs.initHighlightingOnLoad()}},{src:"../reveal/plugin/zoom-js/zoom.js",async:!0,condition:function(){return!!document.body.classList}},{src:"../reveal/plugin/notes/notes.js",async:!0,condition:function(){return!!document.body.classList}},{src:"../reveal/plugin/math/math.js",async:!0}]});
         </script>
-
     </body>
 </html>
