--- a/slides/2019-Madison/index.html
+++ b/slides/2019-Madison/index.html
@@ -865,7 +865,7 @@
                     floral character displacement in a hotspot of plant 
                     diversity.</span>
                 </p>
-            </div>           
+            </div>
         </div>
     </div>
 
@@ -1073,10 +1073,9 @@
 
 <!-- SLIDE YY: ACKNOWLEDGEMENTS -->
 <section>
-    ...
+    <h3>Acknowledgements</h3>
 
 </section>
-
 
 
 
