--- a/slides/2019-Madison/index.html
+++ b/slides/2019-Madison/index.html
@@ -94,10 +94,10 @@
         style="width:35%; position:absolute; top:100px; left:500px">
     </section>       
 
-    <section>
+<!--     <section>
         <h3> Homage to Darwin </h3>                        
         <img src="../data-img/Darwin-3.png" style="width:50%">
-    </section>       
+    </section>      -->  
 </section>
 
 
@@ -108,8 +108,8 @@
     hidden="">
     <h3> My background </h3>
     <p style="font-size:28px; margin-right:5%; margin-left: 5%";>
-    I consider myself to be a <i>Botanist, Evolutionary Biologist, 
-    Programmer, Ecologist and a Geneticist... probably in that order</i>.
+    I'm a <i>Botanist (like Darwin), and an Evolutionary Biologist, 
+    Programmer, Ecologist, and Geneticist... probably in that order</i>.
     </p>
     <div id="photos-aligned">
         <img src="../data-img/crano-flaghorn.jpg" style="width:22%">
@@ -159,6 +159,10 @@
 
 
 <!-- SLIDE 4: WHAT IS MY TOPIC TODAY? -->
+
+
+
+<!-- SLIDE 22: PART II: SPECIATION -->
 <section
     class="future"
     data-transition="none"
@@ -168,7 +172,7 @@
         The <i>Ecological</i> and <i>Evolutionary</i> Consequences of 
         Reproductive Interactions</h5>
 
-    <div style="margin-right:10%; margin-left: 5%; margin-top: 7%; text-align:left;">
+    <div id="part1" style="margin-right:10%; margin-left: 5%; margin-top: 7%; text-align:left;">
         <div style="display:flex; flex-wrap:row;">
             <img src="../data-svg/integrifolia-drawing.svg" style="width:14%;"> 
             <div style="max-width: 80%">
@@ -184,7 +188,7 @@
     </div>
 
 
-    <div style="margin-right:10%; margin-left: 5%; text-align:left">
+    <div id="part2" style="margin-right:10%; margin-left: 5%; text-align:left">
         <div style="display:flex; flex-wrap:row;">
             <img src="https://eaton-lab.org/images/site-logo-mini.svg" style="width:14%"><div style="max-width: 80%">
                 <p style="line-height: 1em">
@@ -199,7 +203,7 @@
     </div>
    
 
-    <div style="margin-right:10%; margin-left: 5%; text-align:left">
+    <div id="part3" style="margin-right:10%; margin-left: 5%; text-align:left">
         <div style="display:flex; flex-wrap:row;">
             <img src="../data-svg/migration-matrix-migrate.svg" 
             style="width:12%; margin-right: 2%"> 
@@ -758,90 +762,6 @@
 </section>
 
 
-<!-- SLIDE 22: PART II: SPECIATION -->
-<section
-    class="future"
-    data-transition="none"
-    hidden="">
-
-    <h5 style="margin-right:10%; margin-left:10%"> 
-        The <i>Ecological</i> and <i>Evolutionary</i> Consequences of 
-        Reproductive Interactions</h5>
-
-    <div id="part1" style="margin-right:10%; margin-left: 5%; margin-top: 7%; text-align:left; opacity: 0.35">
-        <div style="display:flex; flex-wrap:row;">
-            <img src="../data-svg/integrifolia-drawing.svg" style="width:14%;"> 
-            <div style="max-width: 80%">
-                <p style="line-height: 1em">
-                    <span style="font-size:30px">Interference:</span><br>
-                    <span style="font-size:22px;">
-                    Reproductive interactions among close relatives drive 
-                    floral character displacement in a hotspot of plant 
-                    diversity.</span>
-                </p>
-            </div>           
-        </div>
-    </div>
-
-
-    <div id="part2" style="margin-right:10%; margin-left: 5%; text-align:left">
-        <div style="display:flex; flex-wrap:row;">
-            <img src="https://eaton-lab.org/images/site-logo-mini.svg" style="width:14%"><div style="max-width: 80%">
-                <p style="line-height: 1em">
-                    <span style="font-size:30px">Isolation:</span><br>
-                    <span style="font-size:22px">
-                    Floral divergence among populations affects
-                    rates of gene and species coherence.
-                    </span>
-                </p>
-            </div>           
-        </div>
-    </div>
-   
-
-    <div id="part3" style="margin-right:10%; margin-left: 5%; text-align:left">
-        <div style="display:flex; flex-wrap:row;">
-            <img src="../data-svg/migration-matrix-migrate.svg" 
-            style="width:12%; margin-right: 2%"> 
-            <div style="max-width: 80%">
-                <p style="line-height: 1em">
-                    <span style="font-size:30px">Introgression:</span><br>
-                    <span style="font-size:22px;">
-                    Hybrid zones are characterized by discrete trait differences
-                    that reduce gene flow.
-                    </span>
-                </p>
-            </div>           
-        </div>
-    </div>
-</section>
-
-
-<!-- SLIDE 23: EXPERIMENTS -->
-<section data-transition="none">
-    <h5>
-    Experiment: Does style length variation affect gene flow?
-    </h5>    
-
-    <div>
-        <img src="../data-img/crano-tube-Yajiang.jpg" style="width:20%;">
-        <img src="../data-img/crano-tube-Ganze.jpg" style="width:20%;">
-        <img src="../data-img/pollen-tube-experiment-s4-small.jpg" style="width:40%">
-        <img src="../data-img/pollen-tube-1.jpg" style="width:30%;
-        position: absolute; top:350px; left:86px">
-        <img src="../data-img/pollen-tube-2.jpg" style="width:30%;
-        position: absolute; top:350px; left:386px">
-        <img src="../data-svg/pollen-tube-data.svg" style="width:17%; 
-        position:absolute; top:350px; left:700px">
-    </div>
-
-    <div class="fragment"><p style="font-size: 24px; 
-    position:absolute; top:590px;">
-        Larger pollen grows faster and further, consistent with 10X higher
-        migration from long to short style populations inferred from genomic
-        data.
-    </p></div>
-</section>
 
 
 <!-- SLIDE 24: PART III: REINFORCEMENT -->
@@ -870,7 +790,7 @@
     </div>
 
 
-    <div id="part2" style="margin-right:10%; margin-left: 5%; text-align:left">
+    <div id="part2" style="margin-right:10%; margin-left: 5%; text-align:left;">
         <div style="display:flex; flex-wrap:row;">
             <img src="https://eaton-lab.org/images/site-logo-mini.svg" style="width:14%"><div style="max-width: 80%">
                 <p style="line-height: 1em">
@@ -893,14 +813,43 @@
                 <p style="line-height: 1em">
                     <span style="font-size:30px">Introgression:</span><br>
                     <span style="font-size:22px;">
-                    Hybrid zones are characterized by discrete trait differences
-                    that reduce gene flow.
+                    SNP based method for reconstructing admixture on trees.
                     </span>
                 </p>
             </div>           
         </div>
     </div>
 </section>
+
+
+
+
+<!-- SLIDE 23: EXPERIMENTS -->
+<section data-transition="none">
+    <h5>
+    Experiment: Does style length variation affect gene flow?
+    </h5>    
+
+    <div>
+        <img src="../data-img/crano-tube-Yajiang.jpg" style="width:20%;">
+        <img src="../data-img/crano-tube-Ganze.jpg" style="width:20%;">
+        <img src="../data-img/pollen-tube-experiment-s4-small.jpg" style="width:40%">
+        <img src="../data-img/pollen-tube-1.jpg" style="width:30%;
+        position: absolute; top:350px; left:86px">
+        <img src="../data-img/pollen-tube-2.jpg" style="width:30%;
+        position: absolute; top:350px; left:386px">
+        <img src="../data-svg/pollen-tube-data.svg" style="width:17%; 
+        position:absolute; top:350px; left:700px">
+    </div>
+
+    <div class="fragment"><p style="font-size: 24px; 
+    position:absolute; top:590px;">
+        Larger pollen grows faster and further, consistent with 10X higher
+        migration from long to short style populations inferred from genomic
+        data.
+    </p></div>
+</section>
+
 
 
 <!-- SLIDE 25: HORNED BILL; TAXONOMY -->
@@ -1071,9 +1020,90 @@
 
 
 
+<!-- SLIDE 24: PART III: invariants...
+<section
+    class="future"
+    data-transition="none"
+    hidden="">
+
+    <h5 style="margin-right:10%; margin-left:10%"> 
+        The <i>Ecological</i> and <i>Evolutionary</i> Consequences of 
+        Reproductive Interactions</h5>
+
+    <div id="part1" style="margin-right:10%; margin-left: 5%; margin-top: 7%; text-align:left; opacity: 0.35">
+        <div style="display:flex; flex-wrap:row;">
+            <img src="../data-svg/integrifolia-drawing.svg" style="width:14%;"> 
+            <div style="max-width: 80%">
+                <p style="line-height: 1em">
+                    <span style="font-size:30px">Interference:</span><br>
+                    <span style="font-size:22px;">
+                    Reproductive interactions among close relatives drive 
+                    floral character displacement in a hotspot of plant 
+                    diversity.</span>
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="part2" style="margin-right:10%; margin-left: 5%; text-align:left; opacity: 0.35">
+        <div style="display:flex; flex-wrap:row;">
+            <img src="https://eaton-lab.org/images/site-logo-mini.svg" style="width:14%"><div style="max-width: 80%">
+                <p style="line-height: 1em">
+                    <span style="font-size:30px">Isolation:</span><br>
+                    <span style="font-size:22px">
+                    Floral divergence among populations affects
+                    rates of gene and species coherence.
+                    </span>
+                </p>
+            </div>           
+        </div>
+    </div>
+   
+
+    <div id="part3" style="margin-right:10%; margin-left: 5%; text-align:left">
+        <div style="display:flex; flex-wrap:row;">
+            <img src="../data-svg/migration-matrix-migrate.svg" 
+            style="width:12%; margin-right: 2%"> 
+            <div style="max-width: 80%">
+                <p style="line-height: 1em">
+                    <span style="font-size:30px">Introgression:</span><br>
+                    <span style="font-size:22px;">
+                    SNP based method for reconstructing admixture on trees.
+                    </span>
+                </p>
+            </div>           
+        </div>
+    </div>
+</section>
+-->
+
+
+
 <!-- SLIDE YY: ACKNOWLEDGEMENTS -->
 <section>
     <h3>Acknowledgements</h3>
+    <div style="display:flex; flex-wrap:row;">
+        <p style="font-size: 24px; text-align: left">
+        Richard Ree<br>
+        Dave Boufford<br>
+        Huang Shuang-Quan<br>
+        De-Zhu Li<br>
+        Patrick McKenzie<br>
+        Jared Meek<br>
+        Zhengyu Yi<br>
+        Joe Felsenstein<br>
+        </p>
+        <p style="font-size: 24px; text-align: left; margin-left: 10%">
+        NSF DEB<br>
+        NSF DDIG<br>
+        NSF EAPSI<br>
+        Caterpillar<br>
+        Columbia University<br>
+        </p>
+    <img src="../data-img/sipho-2009.jpg" style="width:20%; margin-left: 10%">        
+    </div>
+    <img src="../data-svg/acknowledge-logos.svg" style="width:70%">
 
 </section>
 
