--- a/slides/2019-Madison/index.html
+++ b/slides/2019-Madison/index.html
@@ -73,7 +73,7 @@
     <section>
     <h3> Homage to Darwin </h3>        
     <p style="font-size: 22px">
-    "On the Two Forms, or Dimorphic Condition, in the Species of Primula, and on their remarkable Sexual Relations" (Darwin 1862)</p>
+    "On the Two Forms, or Dimorphic Condition, in the Species of Primula,<br> and on their remarkable Sexual Relations" (Darwin 1862)</p>
         <img src="../data-img/Darwin-primula.jpg" style="width:80%">
     </section>
     
