--- a/slides/2019-Madison/index.html
+++ b/slides/2019-Madison/index.html
@@ -211,8 +211,7 @@
                 <p style="line-height: 1em">
                     <span style="font-size:30px">Introgression:</span><br>
                     <span style="font-size:22px;">
-                    Hybrid zones are characterized by discrete trait differences
-                    that reduce gene flow.
+                    SNP based methods for reconstructing admixture on trees.
                     </span>
                 </p>
             </div>           
@@ -1019,7 +1018,6 @@
 </section>
 
 
-
 <!-- SLIDE 24: PART III: invariants...
 <section
     class="future"
@@ -1075,9 +1073,8 @@
             </div>           
         </div>
     </div>
-</section>
--->
-
+</section
+>-->
 
 
 <!-- SLIDE YY: ACKNOWLEDGEMENTS -->
