update html maps

--- a/slides/2019-Madison/index.html
+++ b/slides/2019-Madison/index.html
@@ -190,7 +190,7 @@
 
     <div id="part2" style="margin-right:10%; margin-left: 5%; text-align:left">
         <div style="display:flex; flex-wrap:row;">
-            <img src="https://eaton-lab.org/images/site-logo-mini.svg" style="width:14%"><div style="max-width: 80%">
+            <img src="../../images/site-logo-mini.svg" style="width:14%"><div style="max-width: 80%">
                 <p style="line-height: 1em">
                     <span style="font-size:30px">Isolation:</span><br>
                     <span style="font-size:22px">
@@ -443,7 +443,7 @@
 <!-- SLIDE 9: MORPHOLOGY -->
 <section>
     <section data-transition="none" 
-    data-background-image="https://eaton-lab.org/images/pedics/p-decor.jpg">
+    data-background-image="../../images/pedics/p-decor.jpg">
         <h3 class='title' 
         style="text-align:left; color:white;">
         Morphological terminology
@@ -602,7 +602,7 @@
 
 <!-- SLIDE 16: genomics  -->
 <section data-transition="none", class="future" hidden="">
-    <h4><i>P. cranolopha RAD-seq genomics</i></h4>
+    <h4><i>P. cranolopha</i> RAD-seq genomics</h4>
     <div class="flex-container" style="display:flex; flex-direction:row;">
         <div class="flex-container" 
         style="display:flex; flex-direction:column; width:50%">
@@ -619,9 +619,9 @@
         </div>
 
         <div class="fragment fade-in"
-        style="display:flex; flex-direction:column; margin-left: 5%; margin-top: 3%">
-            <img src="../data-svg/crano-tree-structure.svg" style="width:500px">
-        </div>
+        style="display:flex; width:50%; flex-direction:column; 
+            margin-left: 5%; margin-top: 7%">
+            <img src="../data-svg/crano-tree-structure.svg" >
     </div>
 </section>
 
@@ -644,8 +644,10 @@
         </div>
 
         <div class="fragment fade-out" 
-        style="display:flex; flex-direction:column; margin-left: 5%; margin-top: 3%; position:relative;">
-            <img src="../data-svg/crano-tree-structure.svg" style="width:500px">
+        style="display:flex; flex-direction:column; 
+            margin-left:5%; margin-top:7%; width:50%;
+            position:relative;">
+            <img src="../data-svg/crano-tree-structure.svg">
         </div>
 
         <div class="fragment fade-in" 
@@ -654,8 +656,9 @@
         </div>
 
         <div class="fragment fade-in" 
-        style="display:flex; flex-direction:column; left:650px; top:435px; position:absolute;">
-            <img src="../data-svg/crano-migration-matrix.svg" style="width:225px">
+        style="display:flex; flex-direction:column;
+            left:660px; top:445px; position:absolute;">
+            <img src="../data-svg/crano-migration-matrix.svg" style="width:180px">
         </div>
     </div>
 </section>
@@ -773,10 +776,11 @@
         The <i>Ecological</i> and <i>Evolutionary</i> Consequences of 
         Reproductive Interactions</h5>
 
-    <div id="part1" style="margin-right:10%; margin-left: 5%; margin-top: 7%; text-align:left; opacity: 0.35">
+    <div id="part1" style="margin-right:10%; margin-left:5%; margin-top:7%; 
+        text-align:left; opacity: 0.35">
         <div style="display:flex; flex-wrap:row;">
             <img src="../data-svg/integrifolia-drawing.svg" style="width:14%;"> 
-            <div style="max-width: 80%">
+            <div style="max-width: 80%; margin-left: 20px">
                 <p style="line-height: 1em">
                     <span style="font-size:30px">Interference:</span><br>
                     <span style="font-size:22px;">
@@ -791,7 +795,8 @@
 
     <div id="part2" style="margin-right:10%; margin-left: 5%; text-align:left;">
         <div style="display:flex; flex-wrap:row;">
-            <img src="https://eaton-lab.org/images/site-logo-mini.svg" style="width:14%"><div style="max-width: 80%">
+            <img src="../../images/site-logo-mini.svg" style="width:14%">
+            <div style="max-width: 80%; margin-left: 20px">
                 <p style="line-height: 1em">
                     <span style="font-size:30px">Isolation:</span><br>
                     <span style="font-size:22px">
@@ -807,8 +812,8 @@
     <div id="part3" style="margin-right:10%; margin-left: 5%; text-align:left">
         <div style="display:flex; flex-wrap:row;">
             <img src="../data-svg/migration-matrix-migrate.svg" 
-            style="width:12%; margin-right: 2%"> 
-            <div style="max-width: 80%">
+            style="width:14%;"> 
+            <div style="max-width: 80%; margin-left: 20px;">
                 <p style="line-height: 1em">
                     <span style="font-size:30px">Introgression:</span><br>
                     <span style="font-size:22px;">
@@ -1075,6 +1080,41 @@
     </div>
 </section
 >-->
+
+
+<!-- 
+<section>
+    <h3> Large-scale SNP-based phylogenetics </h3>
+    
+    <div ...>
+
+        <p>How can we best analyze many species and many (millions of) sites.</p>
+        <p>
+            listing
+        </p>
+    </div>
+</section>
+ -->
+
+
+ <!-- 
+<section>
+    <h3> Quartet-based inference </h3>
+    
+    <div ...>
+
+        <p>
+        Phylogenetic invariants are algebraic patterns in sequence data that are expected to arise given a sequence of evolution occurring along a particular topology. 
+        e.g., ABBA == BABA;  AABB == BBAA
+        For any general markov model of sequence evolution. These patterns are “Model invariant”
+        <p>
+            listing
+        </p>
+    </div>
+</section>
+
+
+  -->
 
 
 <!-- SLIDE YY: ACKNOWLEDGEMENTS -->
