--- a/slides/data-html/Hengduan.html
+++ b/slides/data-html/Hengduan.html
@@ -43,14 +43,14 @@
         layers: [],
         worldCopyJump: false,
         crs: L.CRS.EPSG3857,
-        zoomControl: true,
+        zoomControl: false,
         });
 
   var tile_layer_f5078b88521d415bb538a1551a714550 = L.tileLayer(
         'https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg',
         {
         "attribution": null,
-        "detectRetina": false,
+        "detectRetina": true,
         "maxNativeZoom": 18,
         "maxZoom": 18,
         "minZoom": 0,
