--- a/slides/data-html/crano-map-colored-hybrids.html
+++ b/slides/data-html/crano-map-colored-hybrids.html
@@ -44,7 +44,7 @@
         layers: [],
         worldCopyJump: false,
         crs: L.CRS.EPSG3857,
-        zoomControl: true,
+        zoomControl: false,
         });
 
     
@@ -53,7 +53,7 @@
         'https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg',
         {
         "attribution": null,
-        "detectRetina": false,
+        "detectRetina": true,
         "maxNativeZoom": 18,
         "maxZoom": 18,
         "minZoom": 0,
