KIB talk updates

--- a/slides/2019-KIB/index.html
+++ b/slides/2019-KIB/index.html
@@ -524,6 +524,12 @@
     <img src="../data-svg/svdquartets-extended-4.svg" style="width:71%">
 </section>
 
+<section class="present" data-transition="none">
+    <div style="margin-left: auto; margin-top: 5%">
+    <h4>SVDquartets reduces SNP matrices to categorical results</h4>
+    <img src="../data-svg/svdquartets-extended-5.svg" style="width:71%">
+</section>
+
 
 
 
