botany talks up

--- a/slides/2019-KIB/index.html
+++ b/slides/2019-KIB/index.html
@@ -489,17 +489,6 @@
     <img src="../data-img/inv-matrix-stacked.png" style="width:45%">    
 </section>
 
-
-<section class="present" data-transition="none">
-    <div style="margin-left: auto; margin-top: 5%">    
-    <h3>Quartet matrices</h3>
-    <p>Unique fingerprint for different admixture scenarios</p>
-    <img src="../data-img/patrick-invariants.png" style="width:51%">    
-    <img src="../data-img/patrick-invariants-2.png" style="width:51%">    
-    <!-- <img src="../data-img/inv-matrix-stacked.png" style="width:45%">     -->
-</section>
-
-
 <section class="present" data-transition="none">
     <div style="margin-left: auto; margin-top: 5%">    
     <h4>SVDquartets reduces SNP matrices to categorical results</h4>
@@ -529,6 +518,18 @@
     <h4>SVDquartets reduces SNP matrices to categorical results</h4>
     <img src="../data-svg/svdquartets-extended-5.svg" style="width:71%">
 </section>
+
+
+<section class="present" data-transition="none">
+    <div style="margin-left: auto; margin-top: 5%">    
+    <h3>Stacked count matrices</h3>
+    <p>Unique fingerprint for different admixture scenarios</p>
+    <img src="../data-img/patrick-invariants.png" style="width:51%">    
+    <img src="../data-img/patrick-invariants-2.png" style="width:51%">    
+    <!-- <img src="../data-img/inv-matrix-stacked.png" style="width:45%">     -->
+</section>
+
+
 
 
 
