--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -20,7 +20,7 @@
     Resources:
     <br>
     <br>
-    <a href="http://docs.google.com/viewer?url=https://docs.google.com/a/columbia.edu/document/d/e/2PACX-1vSi2uIzvBR4G8zbMjv0xjhNHwFN0POcYqSAsNIXAivjH3oNXY1xpccog2GUKN-fLLjJIUv7ksfpNzQh/pub?embedded=true">Syllabus </a>
+    <a href="http://docs.google.com/viewer?url=https://eaton-lab.org/slides/fundamentals/Syllabus.pdf?embedded=true">Syllabus </a>
     <br>
     <br>
     <a href="https://nbviewer.jupyter.org/github/genomics-course/">
