fundamentals index update

--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -23,8 +23,9 @@
     <a href="http://docs.google.com/viewer?url=https://eaton-lab.org/slides/fundamentals/Syllabus.pdf?embedded=true">Syllabus </a>
     <br>
     <br>
-    <a href="https://nbviewer.jupyter.org/github/genomics-course/">
-    Notebook answers (look in session-n/notebooks/)</a>
+    <!-- <a href="https://nbviewer.jupyter.org/github/genomics-course/"> -->
+    Assignment answers 
+    <!-- (look in session-n/notebooks/)</a> -->
     <br>
     <br>
     <hr>
@@ -32,6 +33,8 @@
     <br>
     <br>
     <a href="session-1/index.html">1: Introductions</a>
+    <br>    
+    <a href="session-2/index.html">2: History & Evolution</a>
 </div>
 
 </body>
