fundamentals index update

--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -32,9 +32,9 @@
     Lectures:
     <br>
     <br>
-    <a href="session-1/index.html">1: Introductions</a>
+    1: Introductions
     <br>    
-    <a href="session-2/index.html">2: History & Evolution</a>
+    <a href="session-2-history/index.html">2: History & Evolution</a>
 </div>
 
 </body>
