--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -35,6 +35,9 @@
     1: Introductions
     <br>    
     <a href="session-2-history/index.html">2: History & Evolution</a>
+    <br>    
+    <a href="session-3-tree-think/index.html">3: Tree thinking</a>
+    <br>
 </div>
 
 </body>
