--- a/slides/fundamentals/session-3-tree-think/index.html
+++ b/slides/fundamentals/session-3-tree-think/index.html
@@ -360,23 +360,14 @@
                 </div>
             </section>                       
 
-
-
-
-<!-- https://mybinder.org/v2/gh/genomics-course/f3-tree-thinking.git/master?filepath=notebooks -->
-       
-
-
             <section class="future" data-transition="none">
                 <div style="margin-left: auto; margin-top: 5%">                
                 <h2> Reading for next week</h2>
                 <br>
                 <p style="font-size: 0.9em; text-align: left; margin-left: 15%; margin-right: 15%">       
                 <br><br>
-                - Futuyma Evolution Textbook (Chapters 1, 2 & 17)
+                - Futuyma Evolution Textbook (Chapters 16)
                 <br><br>
-                - <a href="https://bioone.org/journals/The-American-Biology-Teacher/volume-70/issue-4/0002-7685(2008)70[222:PT]2.0.CO;2/Phylogenics-amp-Tree-Thinking/10.1662/0002-7685(2008)70[222:PT]2.0.CO;2.full"> Baum, David A., and Susan Offner. 2008. “Phylogenics & Tree-Thinking.” The American Biology Teacher 70 (4): 222–30. https://doi.org/10.1662/0002-7685(2008)70[222:PT]2.0.CO;2.</a>
-                </p>
                 </div>
             </section>            
 
