--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -17,27 +17,29 @@
 <div style="margin: 100px; font-size: 1.5em; ">
 
     <hr>
-    Resources:
-    <br>
-    <br>
-    <a href="http://docs.google.com/viewer?url=https://eaton-lab.org/slides/fundamentals/Syllabus.pdf?embedded=true">Syllabus </a>
+    <h3>Resources:</h3>
+    <p>
+    <a href="http://docs.google.com/viewer?url=https://eaton-lab.org/slides/fundamentals/Syllabus.pdf?embedded=true">Syllabus </a> (updated 9/12/19)
     <br>
     <br>
     <!-- <a href="https://nbviewer.jupyter.org/github/genomics-course/"> -->
-    Assignment answers 
+    <!-- Assignment answers  -->
     <!-- (look in session-n/notebooks/)</a> -->
-    <br>
-    <br>
+    </p>
     <hr>
-    Lectures:
+
+
+    <h3>Lectures:</h3>
+    <p style="line-height: 1.5">
+    1: Introduction 
     <br>
-    <br>
-    1: Introductions
-    <br>    
     <a href="session-2-history/index.html">2: History & Evolution</a>
     <br>    
     <a href="session-3-tree-think/index.html">3: Tree thinking</a>
+    (<a href="https://mybinder.org/v2/gh/genomics-course/f3-tree-thinking.git/master?filepath=notebooks">exercise</a>).
     <br>
+    <a href="session-4-phylogenetics/index.html">4: Phylogenetics</a>.
+    </p>
 </div>
 
 </body>
