--- a/slides/fundamentals/session-4-phylogenetics/index.html
+++ b/slides/fundamentals/session-4-phylogenetics/index.html
@@ -124,10 +124,9 @@
 
 
             <section id="quiz 2" class="future" data-transition="none" 
-            data-background-iframe="https://www.polleverywhere.com/free_text_polls/AJurzwsFGpnm8NN3G0eha?preview=true"
+            data-background-iframe="https://www.polleverywhere.com/multiple_choice_polls/e3q4OjzwDR6edEFulv0lz?preview=true"
             hidden="">
             </section>
-
 
 
 
@@ -189,7 +188,7 @@
             hidden="">
             </section>
 
-            <section id="sysbio" class="future" data-transition="none" 
+            <section id="poll 2" class="future" data-transition="none" 
             data-background-iframe="https://www.polleverywhere.com/free_text_polls/JrlMeSWrI7LdDEviEnK5D?preview=true"
             hidden="">
             </section>
