--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -39,6 +39,10 @@
     (<a href="https://mybinder.org/v2/gh/genomics-course/f3-tree-thinking.git/master?filepath=notebooks">exercise</a>).
     <br>
     <a href="session-4-phylogenetics/index.html">4: Phylogenetics</a>.
+    <br>
+    <a href="session-5-models/index.html">5: Models</a> 
+    (<a href="...">exercise</a>).
+    <br>
     </p>
 </div>
 
