binder link update

--- a/slides/fundamentals/session-5-models/index.html
+++ b/slides/fundamentals/session-5-models/index.html
@@ -216,11 +216,12 @@
 
             <section class="future" data-transition="none">
                 <div style="margin-left: auto; margin-top: 2%">
-                <h3> Exercise in Notebook</h3>
-                <br>
-                <div class="textbox"><p>
-
-                </p></div>
+                    <h3> Exercise in Notebook</h3>
+                    <br>
+                    <div class="textbox"><p>
+                        <a href=https://mybinder.org/v2/gh/genomics-course/f5-likelihood.git/master?filepath=notebooks>https://mybinder.org/v2/gh/genomics-course/f5-likelihood.git/master?filepath=notebooks</a>
+                    </p></div>
+                </div>
             </section>            
 
 
