binder link update

--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Principles and Practice of Modern DNA Sequencing</title>
+    <title>Fundamentals of Evolution 2019</title>
     <link rel="stylesheet" href="../reveal/css/reveal.css">
     <link rel="stylesheet" href="../eaton-lab.css">
     <link rel="stylesheet" href="../reveal/lib/css/zenburn.css">    
@@ -17,6 +17,7 @@
 <div style="margin: 100px; font-size: 1.5em; ">
 
     <hr>
+    <h1>Fundamentals of Evolution (2019)</h1>
     <h3>Resources:</h3>
     <p>
     <a href="http://docs.google.com/viewer?url=https://eaton-lab.org/slides/fundamentals/Syllabus.pdf?embedded=true">Syllabus </a> (updated 9/12/19)
@@ -41,7 +42,7 @@
     <a href="session-4-phylogenetics/index.html">4: Phylogenetics</a>.
     <br>
     <a href="session-5-models/index.html">5: Models</a> 
-    (<a href="...">exercise</a>).
+    (<a href="https://mybinder.org/v2/gh/genomics-course/f5-likelihood.git/master?filepath=notebooks">exercise</a>).
     <br>
     </p>
 </div>
