--- a/slides/fundamentals/session-5-models/index.html
+++ b/slides/fundamentals/session-5-models/index.html
@@ -475,6 +475,8 @@
                 <a href="https://bsapubs.onlinelibrary.wiley.com/doi/10.1002/aps3.1038">
                 McKain Michael R., Johnson Matthew G., Uribe‐Convers Simon, Eaton Deren, and Yang Ya. 2018. “Practical Considerations for Plant Phylogenomics.” Applications in Plant Sciences 0 (0): e01038. https://doi.org/10.1002/aps3.1038.
                 </a>
+                <br><br>
+                Chapter 4 of Futuyma Textbook.
                 </div>
             </section>            
 
