--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -44,6 +44,13 @@
     <a href="session-5-models/index.html">5: Models</a> 
     (<a href="https://mybinder.org/v2/gh/genomics-course/f5-likelihood.git/master?filepath=notebooks">exercise</a>).
     <br>
+
+    <a href="session-6-bayes/session-6-baytes.pdf">6: Bayes</a> 
+    <br>
+
+    <a href="session-7-genomics/session-7-genomics.pdf">7: Genomics</a> 
+    <br>
+
     </p>
 </div>
 
