--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -51,6 +51,12 @@
     <a href="session-7-genomics/session-7-genomics.pdf">7: Genomics</a> 
     <br>
 
+    <a href="session-8-devel/session-8-devel.pdf">8: Development</a> 
+    <br>
+
+    <a href="session-9-popgen/session-9-popgen.pdf">9: Population Genetics</a> 
+    <br>
+
     </p>
 </div>
 
