--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -54,7 +54,7 @@
     <a href="session-8-devel/session-8-devel.pdf">8: Development</a> 
     <br>
 
-    <a href="session-9-popgen/session-9-popgen.pdf">9: Population Genetics</a> 
+    <a href="session-9-popgen/index.html">9: Population Genetics</a> 
     <br>
 
     </p>
