--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -54,9 +54,11 @@
     <a href="session-8-devel/session-8-devel.pdf">8: Development</a> 
     <br>
 
-    <a href="session-9-popgen/index.html">9: Population Genetics</a> 
+    <a href="session-9-popgen/index.html">9: Population Genetics I</a> 
     <br>
 
+    <a href="session-10-popgen/index.html">10: Population Genetics II</a> 
+    <br>
     </p>
 </div>
 
