fund index update

--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -14,14 +14,12 @@
 </head>
 
 <body>
-<div style="margin: 100px; font-size: 1.5em; ">
-
+<div style="margin: 75px; font-size: 1.25em; ">
     <hr>
-    <h1>Fundamentals of Evolution (2019)</h1>
+    <h2>Fundamentals of Evolution (2019)</h2>
     <h3>Resources:</h3>
     <p>
     <a href="http://docs.google.com/viewer?url=https://eaton-lab.org/slides/fundamentals/Syllabus.pdf?embedded=true">Syllabus </a> (updated 9/12/19)
-    <br>
     <br>
     <!-- <a href="https://nbviewer.jupyter.org/github/genomics-course/"> -->
     <!-- Assignment answers  -->
@@ -29,9 +27,8 @@
     </p>
     <hr>
 
-
     <h3>Lectures:</h3>
-    <p style="line-height: 1.5">
+    <p style="line-height: 1.25">
     1: Introduction 
     <br>
     <a href="session-2-history/index.html">2: History & Evolution</a>
@@ -59,6 +56,9 @@
 
     <a href="session-10-popgen/index.html">10: Population Genetics II</a> 
     <br>
+
+    <a href="session-11-coalescent/index.html">11: The Coalescent</a> 
+    <br>    
     </p>
 </div>
 
