added more bayes slides

--- a/slides/fundamentals/index.html
+++ b/slides/fundamentals/index.html
@@ -42,7 +42,7 @@
     (<a href="https://mybinder.org/v2/gh/genomics-course/f5-likelihood.git/master?filepath=notebooks">exercise</a>).
     <br>
 
-    <a href="session-6-bayes/session-6-bayes.pdf">6: Bayes</a> 
+    <a href="session-6-bayes/session-6-bayes.pdf">6: Bayes</a> (<a href="session-6-bayes/session-6-bayes-II.pdf">more Bayes slides</a>).
     <br>
 
     <a href="session-7-genomics/session-7-genomics.pdf">7: Genomics</a> 
@@ -58,6 +58,9 @@
     <br>
 
     <a href="session-11-coalescent/index.html">11: The Coalescent</a> 
+    <br>    
+
+    <a href="session-12-demography/index.html">12: Demography</a> 
     <br>    
     </p>
 </div>
